--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -1,8 +1,8 @@
 .home{
-    background-color: rgb(64, 98, 13);
-    .title{
-        color: white;
-        margin: 0;
+    display: flex;
+
+    .homeContainer {
+        flex: 6;
     }
 }
 
