--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -3,6 +3,11 @@
 
     .homeContainer {
         flex: 6;
+
+        h1 {
+            text-align: center;
+            color: rgb(6, 77, 6);
+        }
     }
 }
 
