mise en place de la page users

--- a/src/views/offers/offers.scss
+++ b/src/views/offers/offers.scss
@@ -1,7 +1,7 @@
-.list{
+.offers{
     display: flex;
 
-    .listContainer {
+    .offersContainer {
         flex: 6;
 
         h1 {
@@ -10,4 +10,3 @@
         }
     }
 }
-
