--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -58,6 +58,14 @@
                     font-weight: 600;
                     color: #888;
                     margin-left: 10px;
+                    text-decoration: none;
+                }
+
+                .linkStyle {
+                    font-style: 13px;
+                    font-weight: 600;
+                    color: #888;
+                    text-decoration: none;
                 }
             }
         }
