--- a/src/views/seeUser/seeUser.scss
+++ b/src/views/seeUser/seeUser.scss
@@ -8,6 +8,46 @@
             text-align: center;
             color: rgb(6, 77, 6);
         }
+
+        .avatarUser {
+            display: flex;
+            align-content: center;
+            justify-content: center;
+
+            img {
+                width: 150px;
+                border-radius: 50%;
+            }
+        }
+
+        .userTable {
+            margin-top: 40px;
+        }
+
+        table {
+            width: 40%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            
+            .bold {
+                font-weight: 700;
+            }
+
+            th,
+            td {
+                padding: 8px;
+                text-align: left;
+            }
+
+            th {
+                background-color: #0b590b;
+                color: white;
+            }
+
+            tr {
+                border-bottom: solid 1px rgb(209, 209, 209);
+            }
+        }
     }
 }
 
