see offer alone

--- a/src/views/list/list.scss
+++ b/src/views/list/list.scss
@@ -48,10 +48,12 @@
 
                 .UserButton {
                     color: rgb(6, 52, 26);
+                    cursor: pointer;
                 }
 
                 .deleteUserButton {
                     color: red;
+                    cursor: pointer;
                 }
             }
 
