--- a/src/views/offers/offers.scss
+++ b/src/views/offers/offers.scss
@@ -59,6 +59,7 @@
                     font-weight: 700;
                     padding: 10px 20px 10px 20px;
                     margin-bottom: 10px;
+                    cursor: pointer;
                 }
 
                 .deleteOffers {
@@ -70,6 +71,7 @@
                     font-weight: 700;
                     padding: 10px 20px 10px 20px;
                     margin-bottom: 10px;
+                    cursor: pointer;
                 }
             }
         }
