--- a/src/views/seeUser/seeUser.scss
+++ b/src/views/seeUser/seeUser.scss
@@ -48,6 +48,37 @@
                 border-bottom: solid 1px rgb(209, 209, 209);
             }
         }
+
+        .usersButton {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin-top: 15px;
+
+            .seeUsers {
+                color: white;
+                background-color: green;
+                border: none;
+                border-radius: 25px;
+                font-size: 20px;
+                font-weight: 700;
+                padding: 10px 20px 10px 20px;
+                margin: 10px;
+                cursor: pointer;
+            }
+
+            .deleteUser {
+                color: white;
+                background-color: red;
+                border: none;
+                border-radius: 25px;
+                font-size: 20px;
+                font-weight: 700;
+                padding: 10px 20px 10px 20px;
+                margin: 10px;
+                cursor: pointer;
+            }
+        }
     }
 }
 
