--- a/src/views/modifyUser/modifyUser.scss
+++ b/src/views/modifyUser/modifyUser.scss
@@ -14,26 +14,38 @@
             flex-direction: column;
             align-items: center;
 
-            input, select {
-                margin: 5px 0;
+            input,
+            select {
+                margin: 10px 10px;
                 padding: 8px;
                 border-radius: 5px;
                 border: 1px solid #ccc;
             }
 
-            button {
-                margin-top: 10px;
-                padding: 8px 20px;
-                border: none;
-                border-radius: 5px;
-                background-color: rgb(6, 77, 6);
-                color: white;
-                cursor: pointer;
+            .usersButton {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                margin-top: 15px;
 
-                &:hover {
-                    background-color: darkgreen;
+                .backList {
+                    color: white;
+                    background-color: green;
+                    border: none;
+                    border-radius: 25px;
+                    font-size: 20px;
+                    font-weight: 700;
+                    padding: 10px 20px 10px 20px;
+                    margin: 10px;
+                    cursor: pointer;
+                    transition: background-color 0.3s;
+                }
+
+                .backList:hover {
+                    background-color: rgb(5, 189, 5);
                 }
             }
+
         }
     }
 }
