--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,11 +10,13 @@
         align-items: center;
         justify-content: center;
 
-        .logo {
+        .linkStyle {
             font-size: 20px;
             font-weight: bold;
-            color: rgb(15, 131, 15);
+            color: rgb(15, 131, 15);;
+            text-decoration: none;
         }
+        
     }
 
     hr {
